# proteinvis

./: CHANGELOG  CMakeLists.txt  README  glapp_framework  pv_config.h.in
pv_app/forms/: ProteinModelFrame.ui  mainwindow.ui  qtgllighteditor.ui  qtglmaterialeditor.ui  viewer.ui
pv_app/include/: DxUtils.h  alphaModel.h  mainwindow.h  oneLevelModel.h  pocketModel.h  protein.h  proteinModel.h  qtgllighteditor.h  qtglmaterialeditor.h  secondaryModel.h  testFile.h  viewer.h
pv_app/resources/: cylinder.frag  cylinder.geom  cylinder_adj_frag.glsl  cylinder_adj_geom.glsl  glslConvertCylinder.geom  glslHelix3.frag  helix.frag  helix.geom  helix.vert  helix_geom.glsl  helix_ideal_frag.glsl  helix_ideal_geom.glsl  helix_vert.glsl  proteinvis.qrc  sheet.frag  sheet.geom  sheet.vert  sheet_frag.glsl  sheet_geom.glsl  sheet_vert.glsl  sphere.frag  sphere.geom  sphere.vert  sphere_cube.frag  sphere_cube.geom  sphere_cube.vert
pv_app/src/: alphaModel.cpp  main.cpp  mainwindow.cpp  oneLevelModel.cpp  pocketModel.cpp  protein.cpp  proteinModel.cpp  qtgllighteditor.cpp  qtglmaterialeditor.cpp  secondaryModel.cpp  testFile.cpp  viewer.cpp
qtcolorpicker/: qtcolorpicker.pro
qtcolorpicker/include/: qtcolorpicker.h
qtcolorpicker/plugin/: plugin.cpp  plugin.h
qtcolorpicker/src/: qtcolorpicker.cpp  qtcolorpicker_widgets.h
